--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -649,7 +649,6 @@ body {
     .input-box {
       position: relative;
       width: 100%;
-      height: 40px;
       background-color: rgb(50, 50, 50);
       border-radius: 20px;
       padding: 0 6px;
@@ -671,6 +670,50 @@ body {
       .editor-wrapper {
         width: 100%;
         height: 100%;
+        overflow: hidden;
+        .file-preview-list {
+          display: flex;
+          align-items: center;
+          overflow: auto;
+          .preview-item-wrapper {
+            position: relative;
+            width: 80px;
+            min-width: 80px;
+            height: 80px;
+            margin: 12px 8px 0 8px;
+            .preview-item {
+              width: 100%;
+              height: 100%;
+              overflow: hidden;
+              border-radius: 12px;
+              svg {
+                position: absolute;
+                background-color: white;
+                color: black;
+                border: 2px solid black;
+                border-radius: 100%;
+                width: 22px;
+                height: 22px;
+                padding: 2px;
+                right: -6px;
+                top: -6px;
+                opacity: 0.8;
+              }
+              img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+              }
+            }
+          }
+          .preview-item-wrapper:last-of-type {
+            margin: 12px 0 0 8px;
+          }
+          .preview-item-wrapper:first-of-type {
+            margin: 12px 8px 0 0;
+          }
+        }
+
         .editor-container {
           width: 100%;
           min-height: 40px;
