--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -582,12 +582,11 @@ body {
       padding-top: 50px;
 
       .my-message {
-        max-width: 90%;
-        margin: 10px 10px 0 0;
+        max-width: 80%;
+        margin: 6px 8px 0 0;
         display: flex;
         flex-direction: column;
         align-self: flex-end;
-        padding-right: 10px;
         word-break: break-all;
         background-color: var(--primary-cyan);
         color: black;
@@ -595,13 +594,24 @@ body {
         padding: 10px;
         white-space: pre-line;
       }
+      .file {
+        background-color: unset;
+        padding: 0;
+        img {
+          width: 100%;
+          height: 100%;
+          max-width: 300px;
+          max-height: 300px;
+          object-fit: contain;
+          border-radius: 20px;
+        }
+      }
       .user-message {
         display: flex;
         flex-direction: column;
         align-self: flex-start;
         max-width: 90%;
-        margin: 10px 0 0 10px;
-        padding-right: 10px;
+        margin: 6px 0 0 8px;
         word-break: break-all;
         background-color: rgb(50, 50, 50);
         color: white;
