--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -583,41 +583,58 @@ body {
 
       .my-message {
         max-width: 80%;
-        margin: 6px 8px 0 0;
+        margin: 4px 8px 0 0;
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
         align-self: flex-end;
         word-break: break-all;
-        background-color: var(--primary-cyan);
         color: black;
-        border-radius: 20px;
-        padding: 10px;
         white-space: pre-line;
+        justify-content: flex-end;
+        align-items: flex-end;
+      }
+      .user-message {
+        position: relative;
+        max-width: 80%;
+        margin: 4px 0 0 8px;
+        display: flex;
+        // flex-direction: column;
+        align-self: flex-start;
+        word-break: break-all;
+        color: white;
+        white-space: pre-line;
+        align-items: flex-end;
+        padding-left: 38px;
+      }
+      .my-bubble {
+        background-color: var(--primary-cyan);
+        padding: 6px 10px;
+        border-radius: 20px;
+        min-width: 30px;
+      }
+      .user-bubble {
+        background-color: rgb(50, 50, 50);
+        border-radius: 20px;
+        padding: 6px 10px;
+        min-width: 30px;
       }
       .file {
         background-color: unset;
-        padding: 0;
-        img {
-          width: 100%;
-          height: 100%;
+        // padding: 0;
+        align-items: flex-end;
+        .img-wrapper {
           max-width: 300px;
           max-height: 300px;
-          object-fit: contain;
-          border-radius: 20px;
+          display: flex;
+          img {
+            width: 100%;
+            height: 100%;
+            max-width: inherit;
+            max-height: inherit;
+            object-fit: contain;
+            border-radius: 20px;
+          }
         }
-      }
-      .user-message {
-        display: flex;
-        flex-direction: column;
-        align-self: flex-start;
-        max-width: 90%;
-        margin: 6px 0 0 8px;
-        word-break: break-all;
-        background-color: rgb(50, 50, 50);
-        color: white;
-        border-radius: 20px;
-        padding: 10px;
-        white-space: pre-line;
       }
     }
   }
