--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -1,5 +1,8 @@
 :root {
   --primary-gradient: linear-gradient(to bottom, #ff0011, #c471ed, #12c2e9);
+  // --bubble-gradient: linear-gradient(to bottom, #12c2e9 52px, #c471ed, #f64f59);
+  // --bubble-gradient: linear-gradient(to bottom, #1bbbbb 52px, #7231db);
+  --bubble-gradient: linear-gradient(to bottom, #1bbbbb 52px, #38af6e);
   --primary-cyan: #1bbbbb;
   --secondary-cyan: #1aadad;
   --cyan-gradient: linear-gradient(to right, #169c9c, #1bd8d8);
