--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -486,6 +486,7 @@ body {
         justify-content: space-between;
         align-items: center;
         color: var(--primary-cyan);
+        color: #1bbbbb;
         width: 100%;
         height: 52px;
         font-size: 24px;
@@ -612,35 +613,60 @@ body {
         padding: 6px 10px;
         border-radius: 20px;
         min-width: 30px;
+        overflow: hidden;
 
-        background-image: var(--primary-gradient);
+        background-image: var(--bubble-gradient);
         background-attachment: fixed;
+        background-size: 100% 685px;
+        background-position-y: 44px;
 
-        // background-size: 900px 900px;
+        animation: bubbleFadeIn 250ms;
       }
+      @keyframes bubbleFadeIn {
+        from {
+          height: 0;
+          padding: 0 5px;
+        }
+        to {
+          height: 100%;
+          padding: 6px 10px;
+        }
+      }
+
       .user-bubble {
         background-color: rgb(50, 50, 50);
         border-radius: 20px;
         padding: 6px 10px;
         min-width: 30px;
+        animation: bubbleFadeIn 250ms;
       }
-      .file {
-        background-color: unset;
-        align-items: flex-end;
-        .img-wrapper {
-          max-width: 300px;
-          max-height: 300px;
-          display: flex;
-          img {
-            width: 100%;
-            height: 100%;
-            max-width: inherit;
-            max-height: inherit;
-            object-fit: contain;
-            border-radius: 20px;
-          }
+      // .file {
+      //   background-color: unset;
+      //   align-items: flex-end;
+      .img-wrapper {
+        max-width: 300px;
+        max-height: 300px;
+        display: flex;
+        animation: imgFadeIn 250ms;
+        img {
+          width: 100%;
+          height: 100%;
+          max-width: inherit;
+          max-height: inherit;
+          object-fit: contain;
+          border-radius: 20px;
         }
       }
+      // }
+    }
+  }
+
+  @keyframes imgFadeIn {
+    from {
+      max-height: 0px;
+    }
+    to {
+      max-height: 300px;
     }
   }
 
@@ -651,6 +677,7 @@ body {
     display: flex;
     align-items: flex-end;
     color: white;
+    color: #38af6e;
 
     .icon-outside {
       width: 36px;
@@ -675,8 +702,10 @@ body {
       font-size: 20px;
       border-radius: 100%;
       margin-right: 8px;
-      background: var(--secondary-cyan);
+      // background: var(--secondary-cyan);
+      background: #38af6e;
       transition: 100ms;
+      color: white;
     }
     .input-box {
       position: relative;
