--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -617,19 +617,25 @@ body {
 
         background-image: var(--bubble-gradient);
         background-attachment: fixed;
-        background-size: 100% 685px;
+        background-size: 100% 691px;
         background-position-y: 44px;
 
         animation: bubbleFadeIn 250ms;
       }
+      // @keyframes bubbleFadeIn {
+      //   from {
+      //     clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+      //   }
+      //   to {
+      //     clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+      //   }
+      // }
       @keyframes bubbleFadeIn {
         from {
-          height: 0;
-          padding: 0 5px;
+          clip-path: circle(0% at 50% 100%);
         }
         to {
-          height: 100%;
-          padding: 6px 10px;
+          clip-path: circle(112% at 50% 100%);
         }
       }
 
@@ -647,7 +653,7 @@ body {
         max-width: 300px;
         max-height: 300px;
         display: flex;
-        animation: imgFadeIn 250ms;
+        animation: bubbleFadeIn 250ms;
         img {
           width: 100%;
           height: 100%;
@@ -657,27 +663,27 @@ body {
           border-radius: 20px;
         }
       }
+      // @keyframes imgFadeIn {
+      //   from {
+      //     max-height: 0px;
+      //   }
+      //   to {
+      //     max-height: 300px;
+      //   }
       // }
-    }
-  }
-
-  @keyframes imgFadeIn {
-    from {
-      max-height: 0px;
-    }
-    to {
-      max-height: 300px;
+      // }
     }
   }
 
   .controller-container {
     width: 100%;
-    padding: 10px 0;
     margin-top: auto;
     display: flex;
     align-items: flex-end;
     color: white;
     color: #38af6e;
+    padding-bottom: 10px;
+    padding-top: 4px;
 
     .icon-outside {
       width: 36px;
